--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ homepage = "https://github.com/jermwatt/pypmed"
 [tool.poetry.dependencies]
 python = ">=3.9.1,<3.11"
 requests = "^2.28.2"
-thefuzz = "^0.19.0"
-python-levenshtein = "^0.21.0"
+rapidfuzz = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
