--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pynih"
+name = "pypmed"
 version = "0.1.3"
 description = "python wrapper for pubmed apis --> https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi/"
 authors = ["Jeremy Watt <jermwatt@gmail.com>"]
